<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Password">

    <TextView

        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:gravity="center_horizontal"
        android:text="@string/POE"
        android:layout_marginTop="110dp"
        android:textSize="25dp"
        />

    <TextView

        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:text="@string/cableType"
        android:layout_marginTop="150dp"
        android:textSize="20dp"
        />

    <EditText
        android:id="@+id/etCat"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="170dp"
        android:hint="Категория"
        android:textSize="25dp"
       />

    <TextView

        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:text="@string/voltage"
        android:layout_below="@+id/etCat"
        android:layout_marginTop="20dp"
        android:textSize="20dp"
        />

    <EditText
        android:id="@+id/etVoltage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="265dp"
        android:hint="@string/volts"
        android:textSize="25dp"
        />

    <TextView

        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:text="@string/cableLength"
        android:layout_marginTop="20dp"
        android:textSize="20dp"
        android:layout_below="@+id/etVoltage"
        />

    <EditText
        android:id="@+id/etLength"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="360dp"
        android:hint="Метры"
        android:textSize="25dp"
        />

    <TextView

        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:text="@string/devices"
        android:layout_marginTop="20dp"
        android:textSize="20dp"
        android:layout_below="@+id/etLength"
        />

    <EditText
        android:id="@+id/etDevices"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="450dp"
        android:hint="Количество"
        android:textSize="25dp"
        />


    <Button
        android:id="@+id/generateButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="520dp"
        android:onClick="startActivity1"
        android:text="@string/calculate"
        />

    <TextView
        android:id="@+id/result"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:layout_marginTop="20dp"
        android:textSize="20dp"
        android:layout_below="@+id/generateButton"
        />





</RelativeLayout>