<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    android:layout_width="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_height="match_parent"

    >

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:gravity="center_horizontal"
        android:text="@string/multicalculator"
        android:textAppearance="@style/TextAppearance.AppCompat.Display2" />

    <Button
        android:id="@+id/button"
        android:layout_width="218dp"
        android:layout_height="110dp"
        android:layout_alignBottom="@id/textView"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="-160dp"
        android:onClick="startActivity1"
        android:text="@string/network"
        android:textAppearance="@style/TextAppearance.AppCompat.Display1" />

    <Button
        android:id="@+id/button2"
        android:layout_width="218dp"
        android:layout_height="110dp"
        android:layout_alignBottom="@id/button"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="-150dp"
        android:onClick="startActivity2"
        android:text="@string/passwordgeneration"
        android:textAppearance="@style/TextAppearance.AppCompat.Display1" />

    <Button
        android:id="@+id/button3"
        android:layout_width="218dp"
        android:layout_height="110dp"
        android:layout_alignBottom="@id/button2"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="-150dp"
        android:onClick="startActivity3"
        android:text="@string/datatransfer"
        android:textAppearance="@style/TextAppearance.AppCompat.Display1" />

    <Button
        android:id="@+id/button4"
        android:layout_width="218dp"
        android:layout_height="110dp"
        android:layout_alignBottom="@id/button3"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="-150dp"
        android:onClick="startActivity4"
        android:text="@string/CabelPOE"
        android:textAppearance="@style/TextAppearance.AppCompat.Display1" />
</RelativeLayout>